# copernicus_explorer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
copernicus_explorer/: Cargo.toml
copernicus_explorer/examples/: test_rust_api.rs
copernicus_explorer/src/: auth.rs  blocking.rs  download.rs  error.rs  geometry.rs  lib.rs  main.rs  models.rs  s3.rs  search.rs
python/: Cargo.toml  README.md  pyproject.toml
python/examples/: test_python_api.py
python/pysrc/copernicus_explorer_py/: __init__.py  cli.py
python/src/: lib.rs
src/: auth.rs  geometry.rs  lib.rs  main.rs
