[workspace]
members = [
    "copernicus_explorer",
    "python",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/vlevasseur073/copernicus_explorer"
description = "Browse and download Sentinel satellite products from the Copernicus Data Space Ecosystem (CDSE)"
readme = "README.md"
