[package]
name = "copernicus_explorer_python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "copernicus_explorer_py"
crate-type = ["cdylib"]

[dependencies]
copernicus_explorer = { path = "../copernicus_explorer" }
pyo3 = { version = "0.24.2", features = ["extension-module"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
