[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "copernicus-explorer"
version = "0.1.0"
description = "Python bindings for the Copernicus Explorer Rust library"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["click>=8.0"]

[project.scripts]
copernicus-explorer = "copernicus_explorer_py.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "pysrc"
